v0.6.0/_sources/projections/azim/azim_general_perspective.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/azim/azim_general_perspective.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_azim_azim_general_perspective.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_azim_azim_general_perspective.py:


General Perspective
===================

The general perspective projection imitates the view of the Earth from a finite
point in space. In a full view of the earth one third of its surface area can
be seen.

**g**\ *lon0/lat0*\ */scale*\ [**+a**\ *azimuth*]\
[**+t**\ *tilt*]\ [**+v**\ *vwidth/vheight*]\ [**+w**\ *twist*]\
[**+z**\ *altitude*] or **G**\ *lon0/lat0*\ */width*\
[**+a**\ *azimuth*]\ [**+t**\ *tilt*]\ [**+v**\ *vwidth/vheight*]\
[**+w**\ *twist*]\ [**+z**\ *altitude*]

The projection type is set with **g** or **G**. *lon0/lat0* specifies the
projection center and *scale* or *width* determine the size of the figure.
With **+a**\ *azimuth* the direction (in degrees) in which you are looking is
specified, measured clockwise from north. **+t**\ *tilt* is given in degrees
and is the viewing angle relative to zenith. A tilt of 0° is looking straight
down, 60° is looking 30° above horizon. The viewport angle in degrees is
described via **+v**\ *vwidth/vheight* and **+w**\ *twist* is the clockwise
rotation of the image (in degrees). **+z**\ *altitude* sets the height in km
of the viewpoint above local sea level (If altitude is less than 10, then it is
the distance from the center of the earth to the viewpoint in earth radii).

The example shows the coast of Northern Europe viewed from 250 km above sea
level looking 30° from north at a tilt of 45°. The height and width of the
viewing angle is both 60°, which imitates viewing with naked eye.

.. GENERATED FROM PYTHON SOURCE LINES 30-40



.. image-sg:: /projections/azim/images/sphx_glr_azim_general_perspective_001.png
   :alt: azim general perspective
   :srcset: /projections/azim/images/sphx_glr_azim_general_perspective_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    coast [WARNING]: 1 annotations along the right border were skipped due to crowding.
    coast [WARNING]: 1 annotations along the left border were skipped due to crowding.
    coast [WARNING]: Crowding decisions is controlled by MAP_ANNOT_MIN_SPACING, currently set to 25.9467p.
    coast [WARNING]: Decrease or increase MAP_ANNOT_MIN_SPACING to see more or fewer annotations, with 0 showing all annotations.
    <IPython.core.display.Image object>






|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.coast(
        projection="G4/52/12c+a30+t45+v60/60+w0+z250",
        region="g",
        frame=["x10g10", "y5g5"],
        land="gray",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  2.715 seconds)


.. _sphx_glr_download_projections_azim_azim_general_perspective.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: azim_general_perspective.py <azim_general_perspective.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: azim_general_perspective.ipynb <azim_general_perspective.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
